# aiscan

./: .aiscanignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  self-metrics.yml
metrics/: 2026-05-04.json
src/aiscan/: __init__.py  __main__.py  aggregator.py  ast_layer.py  attribution.py  base_rule.py  blame.py  cli.py  llm_engine.py  metrics.py  models.py  reporter.py  rule_engine.py  scanner.py
src/aiscan/rules/: __init__.py
src/aiscan/rules/common/: AI_SEC_011_path_traversal.py  __init__.py
src/aiscan/rules/javascript/: AI_SEC_002_missing_authorization_js.py  AI_SEC_009_eval_exec_js.py  AI_SEC_012_permissive_cors_js.py  AI_SEC_013_ssr_state_injection.py  AI_SEC_014_dangerous_inner_html.py  AI_SEC_015_ssrf_ssr_fetch.py  AI_SEC_016_insecure_cookie.py  AI_SEC_017_weak_csp.py  AI_SEC_018_prompt_injection_js.py  __init__.py
src/aiscan/rules/python/: AI_SEC_001_hardcoded_secrets.py  AI_SEC_002_missing_authorization.py  AI_SEC_003_weak_crypto.py  AI_SEC_004_insecure_random.py  AI_SEC_008_unsafe_deserialization.py  AI_SEC_009_eval_exec.py  AI_SEC_018_prompt_injection.py  __init__.py
tests/: conftest.py  test_aggregator.py  test_ast_layer.py  test_js_rules.py  test_llm_engine.py  test_metrics.py  test_reporter.py  test_rule_engine.py  test_scanner.py
tests/fixtures/safe/: authorization_safe.js  authorization_safe.py  crypto_safe.py  prompt_injection_safe.js  prompt_injection_safe.py  random_safe.py  secrets_safe.py
tests/fixtures/vulnerable/: authorization_test.js  authorization_test.py  cookie_test.js  cors_test.js  crypto_test.py  csp_test.js  dangerous_html_test.js  deserialization_test.py  eval_test.js  eval_test.py  path_traversal_test.js  path_traversal_test.py  prompt_injection_test.js  prompt_injection_test.py  random_test.py  secrets_test.py  ssr_state_test.js  ssrf_test.js
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  server.ts
